--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/root",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -46,27 +46,31 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"devDependencies": {
 		"chokidar-cli": "^3.0.0",
-		"dprint": "^0.45.0",
-		"husky": "^9.0.11",
-		"lerna": "^8.2.3",
-		"lint-staged": "^15.2.10",
+		"dprint": "^0.51.1",
+		"husky": "^9.1.7",
+		"lerna": "^9.0.3",
+		"lint-staged": "^16.2.7",
 		"module-alias": "^2.2.3",
-		"patch-package": "^8.0.0",
-		"pnpm": "^9.15.1",
+		"patch-package": "^8.0.1",
+		"pnpm": "^10.27.0",
 		"ts-node": "^10.9.2",
-		"tsup": "^8.4.0",
-		"typescript": "^5.3.3"
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3"
 	},
 	"pnpm": {
 		"overrides": {
-			"glob": "^11.0.0",
-			"rimraf": "^5.0.5",
-			"whatwg-url": "^14.0.0",
+			"glob": "^13.0.0",
+			"rimraf": "^6.1.2",
+			"whatwg-url": "^15.1.0",
 			"@taqueria/node-sdk>node-fetch": "^3.3.2",
-			"undici": "^6.21.1",
+			"undici": "^7.16.0",
 			"keytar": "^7.9.1",
-			"cross-spawn": "^7.0.5"
-		}
+			"cross-spawn": "^7.0.6"
+		},
+		"onlyBuiltDependencies": [
+			"dprint",
+			"nx"
+		]
 	},
 	"lint-staged": {
 		"*.ts": [
@@ -78,6 +82,6 @@
 		"*.json": "npx dprint fmt --config ./dprint.json"
 	},
 	"dependencies": {
-		"elliptic": "^6.6.0"
+		"elliptic": "^6.6.1"
 	}
 }
