--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-contract-types",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -26,7 +26,7 @@
 	"devDependencies": {
 		"@types/jest": "^30.0.0",
 		"@types/node": "^25.0.3",
-		"rimraf": "^5.0.5",
+		"rimraf": "^6.1.2",
 		"ts-jest": "^29.4.6",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
@@ -35,9 +35,9 @@
 	},
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/michel-codec": "24.0.0-beta.0",
-		"@taquito/signer": "24.0.0-beta.0",
-		"@taquito/taquito": "24.0.0-beta.0",
+		"@taquito/michel-codec": "23.1.0",
+		"@taquito/signer": "23.1.0",
+		"@taquito/taquito": "23.1.0",
 		"bignumber.js": "^9.3.1",
 		"fast-glob": "^3.3.3"
 	},
