--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -43,16 +43,16 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/michel-codec": "24.0.0-beta.0",
-		"@taquito/rpc": "24.0.0-beta.0",
-		"@taquito/signer": "24.0.0-beta.0",
-		"@taquito/taquito": "24.0.0-beta.0",
-		"fast-glob": "^3.3.2",
-		"wtfnode": "^0.9.3"
+		"@taquito/michel-codec": "23.1.0",
+		"@taquito/rpc": "23.1.0",
+		"@taquito/signer": "23.1.0",
+		"@taquito/taquito": "23.1.0",
+		"fast-glob": "^3.3.3",
+		"wtfnode": "^0.10.1"
 	},
 	"devDependencies": {
-		"tsup": "^8.4.0",
-		"typescript": "^5.6.2"
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3"
 	},
 	"tsup": {
 		"entry": [
