--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezbox",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on TezBox",
 	"keywords": [
 		"taqueria",
@@ -36,23 +36,23 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "24.0.0-beta.0",
+		"@taquito/signer": "23.1.0",
 		"@types/hjson": "^2.4.6",
 		"async-retry": "^1.3.3",
-		"bignumber.js": "^9.1.2",
+		"bignumber.js": "^9.3.1",
 		"bip39": "^3.1.0",
-		"fast-glob": "^3.3.2",
+		"fast-glob": "^3.3.3",
 		"hjson": "^3.2.2",
 		"http-proxy": "^1.18.1",
-		"portfinder": "^1.0.32",
-		"rambda": "^9.3.0"
+		"portfinder": "^1.0.38",
+		"rambda": "^11.0.1"
 	},
 	"devDependencies": {
-		"@types/async-retry": "^1.4.8",
-		"@types/http-proxy": "^1.17.15",
-		"@types/node": "^22.7.4",
-		"tsup": "^8.4.0",
-		"typescript": "^5.6.2"
+		"@types/async-retry": "^1.4.9",
+		"@types/http-proxy": "^1.17.17",
+		"@types/node": "^25.0.3",
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3"
 	},
 	"tsup": {
 		"entry": [
