--- a/taqueria-plugin-tzcompose/package.json
+++ b/taqueria-plugin-tzcompose/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tzcompose",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"description": "A TzCompose plugin for Taqueria using the GoTz SDK",
 	"main": "index.js",
 	"scripts": {
@@ -17,13 +17,13 @@
 	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"devDependencies": {
-		"@types/node": "^22.7.5",
-		"tsup": "^8.4.0",
-		"typescript": "^5.6.2"
+		"@types/node": "^25.0.3",
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
-		"@taquito/signer": "24.0.0-beta.0"
+		"@taquito/signer": "23.1.0"
 	},
 	"tsup": {
 		"entry": [
