--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.78.7",
+	"version": "0.78.9",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -37,31 +37,31 @@
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
-		"@babel/runtime": "^7.27.0",
+		"@babel/runtime": "^7.28.4",
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "24.0.0-beta.0",
-		"@taquito/taquito": "24.0.0-beta.0",
-		"@taquito/utils": "24.0.0-beta.0",
+		"@taquito/signer": "23.1.0",
+		"@taquito/taquito": "23.1.0",
+		"@taquito/utils": "23.1.0",
 		"bip39": "^3.1.0",
 		"fluture": "^14.0.0",
-		"i18next": "^23.15.1",
+		"i18next": "^25.7.3",
 		"node-fetch": "^3.3.2",
-		"rambda": "^9.3.0",
-		"shell-quote": "^1.8.1",
+		"rambda": "^11.0.1",
+		"shell-quote": "^1.8.3",
 		"stacktrace-js": "^2.0.2",
-		"ts-pattern": "^5.4.0",
-		"why-is-node-running": "^2.2.2",
+		"ts-pattern": "^5.9.0",
+		"why-is-node-running": "^3.2.2",
 		"yargs": "^17.7.2",
-		"zod": "^3.23.8"
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
-		"@types/node": "^20.10.4",
+		"@types/node": "^25.0.3",
 		"@types/project-name-generator": "^2.1.3",
 		"@types/shell-quote": "^1.7.5",
-		"@types/yargs": "^17.0.32",
-		"tsup": "^8.4.0",
-		"typescript": "^5.6.2"
+		"@types/yargs": "^17.0.35",
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3"
 	},
 	"tsup": {
 		"entry": [
