--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
 		"onlyBuiltDependencies": [
 			"dprint",
 			"nx"
+		],
+		"ignoredBuiltDependencies": [
+			"@taquito/taquito"
 		]
 	},
 	"lint-staged": {
