--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -30,9 +30,9 @@
 		"@babel/helpers": "^7.28.4",
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/plugin-contract-types": "workspace:*",
-		"@taquito/signer": "23.1.0",
-		"@taquito/taquito": "23.1.0",
-		"@taquito/utils": "23.1.0",
+		"@taquito/signer": "24.0.0-RC.0",
+		"@taquito/taquito": "24.0.0-RC.0",
+		"@taquito/utils": "24.0.0-RC.0",
 		"@types/jest": "^30.0.0",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.3.1",
