--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -36,7 +36,7 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "workspace:*",
 		"@taqueria/protocol": "workspace:*",
-		"@taquito/signer": "23.1.0",
+		"@taquito/signer": "24.0.0-RC.0",
 		"@types/hjson": "^2.4.6",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.3.1",
