--- a/website/package.json
+++ b/website/package.json
@@ -24,7 +24,7 @@
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "^5.5.0",
     "@taquito/beacon-wallet": "23.1.0",
-    "@taquito/taquito": "23.1.0",
+    "@taquito/taquito": "24.0.0-RC.0",
     "@typeform/embed": "^1.35.1",
     "clsx": "^1.1.1",
     "docusaurus-plugin-image-zoom": "^0.1.1",
